# password-manager

./: CMakeLists.txt  Menus.cpp  Menus.h  OperationOnDatabase.cpp  OperationOnDatabase.h  OperationsOnFile.cpp  OperationsOnFile.h  PasswordGenerator.cpp  PasswordGenerator.h  README.md  Record.cpp  Record.h  main.cpp
